# galactic-inferno

./: Bomb.cpp  CMakeLists.txt  Explosion.cpp  Game.cpp  Helicopter.cpp  LICENSE  Makefile.save  Meteor.cpp  Missile.cpp  Pipe.cpp  Projectile.cpp  README.md  ScrollingBackground.cpp  main.cpp  scores.txt
header-files/: Bomb.h  Explosion.h  Game.h  GameObject.h  Helicopter.h  Meteor.h  Missile.h  Pipe.h  Projectile.h  ScrollingBackground.h
